--- a/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
@@ -25,18 +25,20 @@ Shopping Cart
                 </div>
                 <div class="col">
                     <ul class="pagination al justify-content-center">
-                        <li class="page-item"><a class="page-link" href="{% url 'loja:adicionar_produto' produto.id %}">+</a></li>
+                        <li class="page-item"><a class="page-link" href="{% url 'loja:adicionar_produto' produto.id %}">+</a>
+                        </li>
                         <li class="page-item">
                             <a class="page-link">
-                            {% for key, value in lista_carrinho_dict.items %}
+                                {% for key, value in lista_carrinho_dict.items %}
                                 {% if key|floatformat:"0" == produto.id|floatformat:"0" %}
-                                    {{ value }}
+                                {{ value }}
                                 {% endif %}
-                            {% endfor %}
+                                {% endfor %}
                             </a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="{% url 'loja:remover_produto' produto.id %}">-</a></li>
-                      </ul>
+                        <li class="page-item"><a class="page-link"
+                                                 href="{% url 'loja:remover_produto' produto.id %}">-</a></li>
+                    </ul>
                 </div>
                 <div class="col text-center">
                     <a href="{% url 'loja:remover_carrinho' produto.id %}" class="btn btn-primary">
@@ -54,7 +56,59 @@ Shopping Cart
             <div class="row align-items-center">
                 <div class="col text-begin">Total: {{ total }}</div>
                 <div class="col text-end ">
-                    <a href="{% url 'loja:comprar' %}" class="btn btn-primary">Buy</a>
+                    <!-- <a href="{% url 'loja:comprar' %}" class="btn btn-primary">Buy</a> -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Buy
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                         aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Payment Details</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row gx-3">
+                                        <div class="col-12">
+                                            <div class="d-flex flex-column">
+                                                <p class="text mb-1">Person Name</p>
+                                                <input class="form-control mb-3" type="text" placeholder="Name"
+                                                       value="{{ request.user.username }}">
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="d-flex flex-column">
+                                                <p class="text mb-1">Card Number</p>
+                                                <input class="form-control mb-3" type="text"
+                                                       placeholder="1234 5678 435678">
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="d-flex flex-column">
+                                                <p class="text mb-1">Expiry</p>
+                                                <input class="form-control mb-3" type="text"
+                                                       placeholder="MM/YYYY">
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="d-flex flex-column">
+                                                <p class="text mb-1">CVV/CVC</p>
+                                                <input class="form-control mb-3 pt-2 " type="password"
+                                                       placeholder="***">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <a href="{% url 'loja:comprar' %}" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </li>
