--- a/Projeto/Merch_ISCTE/loja/templates/loja/home.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/home.html
@@ -9,5 +9,7 @@ Home
 {% endblock %}
 
 {% block blocobody %}
-
+<div class="bg-image" style="background-image: url('https://www.iscte-iul.pt/assets/files/2017/02/15/1487158179806_noticias_PESQUISA.jpg'); height: 100vh; background-repeat: no-repeat; background-size: cover;">
+    <div class="container-md w-50 h-50 position-absolute top-50 start-50 translate-middle shadow-none p-3 mb-5 bg-light rounded opacity-50 bg-dark"> </div>
+</div>
 {% endblock %}
