--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% load static %}
-    <link href="{% static 'loja/css/style.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'loja/css/style.css' %}" rel="stylesheet" type="text/css"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>
         {% block title %}
         Produtos
@@ -20,185 +20,212 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Merch@ISCTE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Merch@ISCTE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'loja:home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Products</a>
-                    </li>
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:util' 0 %}">Products</a>
+                </li>
 
 
-                </ul>
-                <ul class="navbar-nav inline my-2 my-lg-0">
-                    {% if not request.user.is_authenticated %}
-                    <li class="nav-item dropdown dropstart">
-                        <a class="nav-link" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Login
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="dLabel" aria-labelledby="navbarDropdown2">
-                            <form class="px-1 py-2" action="{% url 'loja:loginview' %}" method="post">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label>Username</label>
-                                    <input input class="form-control" id="username" name="username" required="required"
-                                        type="text" placeholder="example">
-                                </div>
-                                <div class="form-group">
-                                    <label>Password</label>
-                                    <input class="form-control" id="pass" name="pass" required="required"
-                                        type="password" placeholder="Password">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Sign in</button>
-                            </form>
+            </ul>
+            <ul class="navbar-nav inline my-2 my-lg-0">
+                {% if not request.user.is_authenticated %}
+                <li class="nav-item dropdown dropstart">
+                    <a class="nav-link" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Login
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dLabel" aria-labelledby="navbarDropdown2">
+                        <form class="px-1 py-2" action="{% url 'loja:loginview' %}" method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label>Username</label>
+                                <input input class="form-control" id="username" name="username" required="required"
+                                       type="text" placeholder="example">
+                            </div>
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input class="form-control" id="pass" name="pass" required="required"
+                                       type="password" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                        </form>
+                    </div>
+                </li>
+                <a class="btn btn-outline-success" href="{% url 'loja:registaruser' %}" type="submit">Register</a>
+                {% else %}
+                {% if not request.user.is_superuser %}
+                <li class="nav-item">
+                    <a href="{% url 'loja:carrinho' %}" class="btn ">
+                        <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:perfil' %}">Profile</a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:logoutview' %}">Logout</a>
+                </li>
+                {% endif %}
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
+{% block search %}
+<form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
+    {% csrf_token %}
+    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search"
+           aria-label="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+{% endblock %}
+{% block blocobody %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <div id="content" class="">
+                {% if delete_category_error %}
+                <div class="m-5"><h5>{{ delete_category_error }}</h5></div>
+                {% endif %}
+                {% if categoria %}
+                <div class="m-5"><h5>Category: {{ categoria.categoria_nome }}</h5></div>
+                {% else %}
+                <div class="m-5"><h5>All products</h5></div>
+                {% endif %}
+                <div class="row justify-content-center" style="margin-left:0px;margin-right:0px;">
+                    {% if categoria %}
+                    {% if request.user.is_superuser %}
+                    <div class="card" style="width: 18rem;">
+                        <img src="/static/media/addProduct.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
                         </div>
-                    </li>
-                    <a class="btn btn-outline-success" href="{% url 'loja:registaruser' %}" type="submit">Register</a>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Price: Product Price</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="{% url 'loja:criar_produto' categoria.id %}">Create Product</a>
+                        </div>
+                    </div>
+                    {% endif %}
+                    {% endif %}
+                    {% if lista_produto %}
+                    {% for produto in lista_produto %}
+                    <div class="card p-1 m-2" style="width: 18rem;">
+                        <img src="{{ produto.foto }}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ produto.produto_nome }}</h5>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
+                                <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
+                            </a>
+                            <a href="{% url 'loja:detalhe_produto' produto.id %}" type="button"
+                               class="btn btn-primary">
+                                Product Details
+                            </a>
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'loja:apagar_produto' produto.id %}">Delete Product</a>
+                            <a href="{% url 'loja:editar_produto' produto.id %}">Edit Product</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endfor %}
                     {% else %}
-                    {% if not request.user.is_superuser %}
-                    <li class="nav-item">
-                        <a href="{% url 'loja:carrinho' %}" class="btn ">
-                            <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'loja:perfil' %}">Profile</a>
-                    </li>
+                    <div class="m-5">There are no products available.</div>
                     {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'loja:logoutview' %}">Logout</a>
-                    </li>
-                    {% endif %}
-                </ul>
-
+                </div>
+                {% if request.user.is_superuser %}
+                {% if categoria %}
+                <a href="{% url 'loja:apagar_categoria' categoria.id %}">Delete Category</a>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
-    </nav>
-
-    {% block search %}
-    <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
-        {% csrf_token %}
-        <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search"
-            aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    {% endblock %}
-    {% block blocobody %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <div id="content" class="">
-                    <div class="m-5"><h5>All products</h5></div>
-                    {% if lista_produto %}
-                    <div class="row justify-content-center" style="margin-left:0px;margin-right:0px;">
-                        {% for produto in lista_produto %}
-                        <div class="card p-1 m-2" style="width: 18rem;">
-                            <img src="{{ produto.foto }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ produto.produto_nome }}</h5>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
-                            </ul>
-                            <div class="card-body">
-                                <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
-                                    <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
-                                </a>
-                                <a href="{% url 'loja:detalhe_produto' produto.id %}" type="button"
-                                    class="btn btn-primary">
-                                    Product Details
-                                </a>
-                                {% if request.user.is_superuser %}
-                                <a href="{% url 'loja:apagar_produto' produto.id %}">Delete Product</a>
-                                <a href="{% url 'loja:editar_produto' produto.id %}">Edit Product</a>
-                                {% endif %}
-                            </div>
-                        </div>
+        <div class="col-2">
+            <nav id="sidebar">
+                <div class="p-4 pt-5">
+                    <h5>Categories</h5>
+                    {% if lista_categoria %}
+                    <ul class="list-unstyled components mb-5">
+                        <li>
+                            <a href="{% url 'loja:util' 0 %}">All products</a>
+                        </li>
+                        {% for categoria in lista_categoria %}
+                        <li>
+                            <a href="{% url 'loja:util' categoria.id %}">{{ categoria.categoria_nome}}</a>
+                        </li>
                         {% endfor %}
-                        {% else %}
-                        <div class="m-5">There are no products available.</div>
-                        {% endif %}
-                    </div>
-                    
-                </div>
-            </div>
-            <div class="col-2">
-                <nav id="sidebar">
-                    <div class="p-4 pt-5">
-                        <h5>Categories</h5>
-                        {% if lista_categoria %}
-                        <ul class="list-unstyled components mb-5">
-                            <li>
-                                <a href="{% url 'loja:index' %}">All products</a>
-                            </li>
-                            {% for categoria in lista_categoria %}
-                            <li>
-                                <a href="{% url 'loja:detalhe_categoria' categoria.id %}">{{ categoria.categoria_nome}}</a>
-                            </li>
-                            {% endfor %}
-                            {% if request.user.is_superuser %}
-                            <li>
-                                <a href="criar_categoria">Create new category</a>
-                            </li>
-                            {% endif %}
-                        </ul>
-                        {% else %}
-                        <p>There are no categories</p>
                         {% if request.user.is_superuser %}
                         <li>
-                            <a href="criar_categoria">Create new category</a>
+                            <a href="{% url 'loja:criar_categoria' %}">Create new category</a>
                         </li>
                         {% endif %}
-                        {% endif %}
-                    </div>
-                </nav>
-            </div>
+                    </ul>
+                    {% else %}
+                    <p>There are no categories</p>
+                    {% if request.user.is_superuser %}
+                    <li>
+                        <a href="{% url 'loja:criar_categoria' %}">Create new category</a>
+                    </li>
+                    {% endif %}
+                    {% endif %}
+                </div>
+            </nav>
         </div>
     </div>
-    </div>
-    {% endblock %}
+</div>
+</div>
+{% endblock %}
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+<!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+<!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
 
-    {% block blocofooter %}
-    <div class="container-fluid">
-        <footer class="py-3 my-4">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="{% url 'loja:home' %}" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/"
-                        class="nav-link px-2 text-muted">Iscte</a></li>
-                <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt"
-                        class="nav-link px-2 text-muted">Fénix</a></li>
-                <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt"
-                        class="nav-link px-2 text-muted">Moodle</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-            </ul>
-            <p class="text-center text-muted">© 2022 Merch@ISCTE, Inc</p>
-        </footer>
-    </div>
-    {% endblock %}
+{% block blocofooter %}
+<div class="container-fluid">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="{% url 'loja:home' %}" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/"
+                                    class="nav-link px-2 text-muted">Iscte</a></li>
+            <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt"
+                                    class="nav-link px-2 text-muted">Fénix</a></li>
+            <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt"
+                                    class="nav-link px-2 text-muted">Moodle</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2022 Merch@ISCTE, Inc</p>
+    </footer>
+</div>
+{% endblock %}
 
 </body>
 
