--- a/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
@@ -1,7 +1,7 @@
 {% extends "loja/index.html" %}
 
 {% block title %}
-    Create User
+Create User
 {% endblock %}
 
 {% block search %}
@@ -13,30 +13,30 @@
 {% load static %}
 
 <div class="container-md m-5 w-50 mx-auto">
-    <form action="registo" enctype="multipart/form-data" method="post">
+    <form class="needs-validation" action="registo" enctype="multipart/form-data" method="post" >
         {% csrf_token %}
         <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" name="username">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="text" class="form-control" id="email" name="email">
-          </div>
+            <input type="text" class="form-control" id="email" name="email" required>
+        </div>
         <div class="mb-3">
-          <label for="pass" class="form-label">Password</label>
-          <input type="password" class="form-control" id="pass" name="pass">
+            <label for="pass" class="form-label">Password</label>
+            <input type="password" class="form-control" id="pass" name="pass" required>
         </div>
         <div class="mb-3">
             <label for="curso" class="form-label">Course</label>
-            <input type="text" class="form-control" id="curso" name="curso">
-          </div>
-          <div class="mb-3">
+            <input type="text" class="form-control" id="curso" name="curso" required>
+        </div>
+        <div class="mb-3">
             <label for="myfile" class="form-label">Profile picture</label>
             <input class="form-control" type="file" id="myfile">
-          </div>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+    </form>
 </div>
 
 
