--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -12,7 +12,7 @@ Lista
 
 <div class="card mb-3" style="max-width: 1000px;">
     <div class="row g-0">
-         <div class="col-md-4">
+        <div class="col-md-4">
             <img src="{{ produto.foto }}" class="img-fluid rounded-start">
         </div>
 
@@ -21,6 +21,61 @@ Lista
                 <h5 class="card-title">{{ produto.produto_nome }}</h5>
                 <p class="card-text">Description: {{ produto.produto_texto }}</p>
                 <p class="card-text">Price: {{ produto.preco_data }}$</p>
+                <p class="card-text">Rating: {{ media }} of 5 ({{ count }})</p>
+                {% if not already_voted %}
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Vote
+                </button>
+                {% endif %}
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Vote</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="{% url 'loja:rate_produto' produto.id %}" enctype="multipart/form-data"
+                                      method="post">
+                                    {% csrf_token %}
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio1" value="1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio2" value="2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio3" value="3">
+                                        <label class="form-check-label" for="inlineRadio3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio4" value="4">
+                                        <label class="form-check-label" for="inlineRadio4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio5" value="5">
+                                        <label class="form-check-label" for="inlineRadio5">5</label>
+                                    </div>
+                                    <br> <br>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
                     <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
                 </a>
