--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -8,18 +8,17 @@ Lista
 {% endblock %}
 
 {% block blocobody %}
-
-
-<div class="card mb-3 " style="max-width: 1125px; ">
+<br>
+<div class="card mb-3 " style="max-width: 1200px; margin: 0 auto;">
     <div class="row g-0 ">
         <div class="col-md-4">
             <img src="{{ produto.foto }}" class="img-fluid rounded-start">
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-8 ">
             <div class="card-body">
                 <h5 class="card-title">{{ produto.produto_nome }}</h5>
-                <p class="card-text">Description: {{ produto.produto_texto }}</p>
+                <p class="card-text ">Description: {{ produto.produto_texto }}</p>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
                     <li class="list-group-item">
