--- a/Projeto/Merch_ISCTE/loja/templates/loja/home.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/home.html
@@ -17,7 +17,7 @@ Home
 </div> -->
 <div class="container w-75 m-5 mx-auto">
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <h1 class="display-1" style="text-align:justify">Merch@Iscte</h1>
             <h2 class="pt-5 pb-5" style="text-align:justify">Welcome to the merchandising store of Iscte.
                 <br>
@@ -25,7 +25,7 @@ Home
             </h2>
             <a class="btn btn-primary btn-lg" href="{% url 'loja:util' 0 %}">Buy now</a>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2500">
@@ -34,7 +34,7 @@ Home
                     {% if lista_produto %}
                     {% for produto in lista_produto %}
                   <div class="carousel-item" data-bs-interval="5000">
-                    <img src="{{ produto.foto }}" class="d-block w-100"  alt="...">
+                    <img src="{{ produto.foto }}" class="d-block mx-auto"  alt="..." style="height: 500px;">
                   </div>
                     {% endfor %}
                     {% endif %}
