Rating with stars

--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -46,6 +46,7 @@ Lista
                                         <p class="card-text">No rates available.</p>
                                         {% else %}
                                         ({{ count }} reviews)
+                                        <p class="card-text">&nbsp{{ media }} in 5</p>
                                         {% endif %}
                                     </div>
 
