Change escudos to euros

--- a/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
@@ -18,7 +18,7 @@ Shopping Cart
                     {{ produto.produto_nome }}
                 </div>
                 <div class="col text-center">
-                    {{ produto.preco_data}}$
+                    {{ produto.preco_data}}€
                 </div>
                 <div class="col">
                     <ul class="pagination al justify-content-center">
