--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -17,7 +17,7 @@ Lista
                 <h5 class="card-title">{{ produto.produto_nome }}</h5>
                 <p class="card-text ">Description: {{ produto.produto_texto }}</p>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
+                    <li class="list-group-item">Price: {{ produto.preco_data }}€</li>
                     <li class="list-group-item">
                         <p class="card-text">Rating:</p>
                         <div class="row">
