--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -130,7 +130,7 @@
                             <h5 class="card-title">{{ produto.produto_nome }}</h5>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
+                            <li class="list-group-item">Price: {{ produto.preco_data }}€</li>
                         </ul>
                         <div class="card-body">
                             <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
