--- a/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
@@ -100,7 +100,7 @@ Shopping Cart
 
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <a href="{% url 'loja:comprar' %}" class="btn btn-primary">Buy</a>
+                                    <a href="{% url 'loja:comprar' total %}" class="btn btn-primary">Buy</a>
                                 </div>
                             </div>
                         </div>
