--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -76,6 +76,9 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:buy_history' %}">Buy History</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:logoutview' %}">Logout</a>
                 </li>
                 {% endif %}
